<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ComparativeActivity">

    <ScrollView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <LinearLayout
                    android:id="@+id/ll1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <View
                        android:background="@color/colorAccent"
                        android:layout_width="3dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_height="50dp"/>

                <TextView
                        android:text="PLANO DE OBRA"
                        android:layout_width="match_parent"
                        android:layout_marginStart="5dp"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorAccent"
                        android:layout_height="match_parent"/>

            </LinearLayout>

            <TextView
                    android:id="@+id/text1"
                    app:layout_constraintTop_toBottomOf="@id/ll1"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:text="@string/text_comparative_1"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:id="@+id/ll2"
                    app:layout_constraintTop_toBottomOf="@id/text1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:gravity="left"
                        android:layout_height="match_parent">

                    <ImageView
                            android:src="@drawable/peaplework"
                            android:layout_width="35dp"
                            android:layout_height="35dp"/>

                    <TextView
                            android:text="MÃO DE OBRA: 40% de custo da obra"
                            android:layout_width="wrap_content"
                            android:layout_marginStart="8dp"
                            android:textSize="14sp"
                            android:gravity="center_vertical"
                            android:textColor="@color/colorPrimary"
                            android:layout_height="match_parent"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ll3"
                    app:layout_constraintTop_toBottomOf="@id/ll2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:gravity="left"
                        android:layout_height="match_parent">

                    <ImageView
                            android:src="@drawable/pa"
                            android:layout_width="35dp"
                            android:layout_height="35dp"/>

                    <TextView
                            android:text="ESTRUTURA: 30% do custo da obra"
                            android:layout_width="wrap_content"
                            android:layout_marginStart="8dp"
                            android:textSize="14sp"
                            android:gravity="center_vertical"
                            android:textColor="@color/colorPrimary"
                            android:layout_height="match_parent"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ll4"
                    app:layout_constraintTop_toBottomOf="@id/ll3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:gravity="left"
                        android:layout_height="match_parent">

                    <ImageView
                            android:src="@drawable/windows"
                            android:layout_width="35dp"
                            android:layout_height="35dp"/>

                    <TextView
                            android:text="ACABAMENTO: 30% do custo da obra"
                            android:layout_width="wrap_content"
                            android:layout_marginStart="8dp"
                            android:textSize="14sp"
                            android:gravity="center_vertical"
                            android:textColor="@color/colorPrimary"
                            android:layout_height="match_parent"/>
                </LinearLayout>

            </LinearLayout>

            <TextView
                    android:id="@+id/text2"
                    app:layout_constraintTop_toBottomOf="@id/ll4"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:text="@string/text_comparative_2"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:id="@+id/ll5"
                    app:layout_constraintTop_toBottomOf="@id/text2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:gravity="left"
                        android:layout_height="match_parent">

                    <ImageView
                            android:src="@drawable/coins"
                            android:layout_width="35dp"
                            android:layout_height="35dp"/>

                    <TextView
                            android:text="-30 a 40% do custo final da obra"
                            android:layout_width="wrap_content"
                            android:layout_marginStart="8dp"
                            android:textSize="14sp"
                            android:gravity="center_vertical"
                            android:textColor="@color/colorPrimary"
                            android:layout_height="match_parent"/>
                </LinearLayout>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_marginStart="5dp"
                        android:text="@string/text_comparative_3"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ll6"
                    app:layout_constraintTop_toBottomOf="@id/ll5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:gravity="left"
                        android:layout_height="match_parent">

                    <ImageView
                            android:src="@drawable/nature"
                            android:layout_width="35dp"
                            android:layout_height="35dp"/>

                    <TextView
                            android:text="Mais sustentabilidade"
                            android:layout_width="wrap_content"
                            android:layout_marginStart="8dp"
                            android:textSize="14sp"
                            android:gravity="center_vertical"
                            android:textColor="@color/colorPrimary"
                            android:layout_height="match_parent"/>
                </LinearLayout>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_marginStart="5dp"
                        android:text="@string/text_comparative_4"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ll7"
                    app:layout_constraintTop_toBottomOf="@id/ll6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:gravity="left"
                        android:layout_height="match_parent">

                    <ImageView
                            android:src="@drawable/selo"
                            android:layout_width="35dp"
                            android:layout_height="35dp"/>

                    <TextView
                            android:text="Qualidade e resistência comprovadas"
                            android:layout_width="wrap_content"
                            android:layout_marginStart="8dp"
                            android:textSize="14sp"
                            android:gravity="center_vertical"
                            android:textColor="@color/colorPrimary"
                            android:layout_height="match_parent"/>
                </LinearLayout>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_marginStart="5dp"
                        android:text="@string/text_comparative_5"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>